Correction of styles and alignments

--- a/src/components/Blog/blog.scss
+++ b/src/components/Blog/blog.scss
@@ -2,7 +2,7 @@
     margin: 5.5rem 3.5rem;
 
     .mySwiper {
-        padding: 2.5rem 20px;
+        padding: 0 20px 2.5rem;
 
         .swiper-slide {
             background: var(--white-300);
